--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {
   height: 100%;
   width: 100%;
-  background-color: black;
+  background-color: #140B07;
 }
 
 
@@ -39,4 +39,5 @@ a:link{
 a:visited{
   color:white;
 }
+
 
